--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "express": "4.x",
-    "exec": "0.0.5",
-    "sleep": "1.1.0",
-    "mqtt": "2.15.0",
-    "socket.io": "1.7.3",
-    "method-override": "2.3.8",
     "body-parser": "1.17.1",
-    "mongoose": "~4.9.8"
+    "exec": "0.0.5",
+    "express": "^4.16.3",
+    "method-override": "2.3.8",
+    "mongoose": "~4.9.8",
+    "mqtt": "2.15.0",
+    "sleep": "1.1.0",
+    "socket.io": "1.7.3"
   }
 }
