--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "body-parser": "1.17.1",
     "exec": "0.0.5",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "method-override": "2.3.8",
     "mongoose": "~4.9.8",
     "mqtt": "2.15.0",
