--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.10",
     "method-override": "2.3.8",
     "mongoose": "~4.9.8",
+    "mosca": "^2.8.3",
     "mqtt": "2.15.0",
     "sleep": "1.1.0",
     "socket.io": "1.7.3"
