--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "mqtt": "2.15.0",
     "sleep": "1.1.0",
     "socket.io": "1.7.3",
-    "python-shell": "^1.0.6"
+    "python-shell": "^1.0.6",
+    "fs": "^0.0.1-security"
   }
 }
